--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.416.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
+    "moongoose": "^0.0.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
